--- a/profile_doc/profile_doc/src/main/resources/sonar-project.properties
+++ b/profile_doc/profile_doc/src/main/resources/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=profile
+sonar.projectKey=profile_doc
 sonar.projectName=profile_doc
 sonar.projectVersion=1.0
 sonar.sources=src
@@ -6,4 +6,4 @@ sonar.language=java
 sonar.java.binaries=target/classes
 sonar.sourceEncoding=UTF-8
 sonar.host.url=http://localhost:9000
-sonar.login=sqp_872138ef6a61930115c9e8b35ee4890c9e6ef7ee
+sonar.login=sqp_f193ab527cb2a35701f46db6d35845b1fb008a32
